[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']


[tool.poetry]
authors = ['Sitt Guruvanich <aekazitt+github@gmail.com>']
description = 'Kogai: Taproot Locking and Spending Workshop'
license = 'MIT'
name = 'kogai'
packages = [{include='serve.py'}]
readme = 'README.md'
version = '0.0.1'


[tool.poetry.dependencies]
fastapi = '^0.111.0'
python = '^3.8'
python-bitcointx = '^1.1.5'
rizzler = '^0.1.5'


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
aesir = '^0.4.2'
ruff = '^0.4.8'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'
